refactor: rm clean up dataset

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,24 +114,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(268850, 49)"
+       "(268850, 17)"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def extractColumnsFromDataset(dataset):\n",
-    "    dataset[['regio1', 'newlyConst', 'balcony', 'totalRent', 'yearConstructed', 'hasKitchen', 'baseRent', 'livingSpace', 'condition', 'interiorQual', 'petsAllowed','noRooms', 'thermalChar', 'regio2', 'regio3', 'lastRefurbish', 'date']]\n",
-    "    return dataset\n",
+    "    filtered = dataset[['regio1', 'newlyConst', 'balcony', 'totalRent', 'yearConstructed', 'hasKitchen', 'baseRent', 'livingSpace', 'condition', 'interiorQual', 'petsAllowed','noRooms', 'thermalChar', 'regio2', 'regio3', 'lastRefurbish', 'date']]\n",
+    "    return filtered\n",
     "\n",
     "extracted_immo_data = extractColumnsFromDataset(raw_immo_data)\n",
     "extracted_immo_data.shape"
@@ -139,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12575, 49)"
+       "(12575, 17)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,34 +164,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cleanDataset(dataset):\n",
-    "    dataset = dataset.replace({r'\\r\\n': ' ', r'\\r': ' ', r'\\n': ' '}, regex=True)\n",
-    "    return dataset\n",
-    "\n",
     "def saveToCsv(dataset):\n",
     "    dataset.to_csv('outData.csv', sep=\"\\t\", index=False)\n",
     "\n",
-    "\n",
-    "clean_chemnitz = cleanDataset(chemnitz_rows)\n",
-    "saveToCsv(clean_chemnitz)"
+    "saveToCsv(chemnitz_rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(12575, 49)"
+       "(12575, 17)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
