docs: business understanding okrs

--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "(268850, 17)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "(12575, 17)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,23 +176,327 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>regio1</th>\n",
+       "      <th>newlyConst</th>\n",
+       "      <th>balcony</th>\n",
+       "      <th>totalRent</th>\n",
+       "      <th>yearConstructed</th>\n",
+       "      <th>hasKitchen</th>\n",
+       "      <th>baseRent</th>\n",
+       "      <th>livingSpace</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>interiorQual</th>\n",
+       "      <th>petsAllowed</th>\n",
+       "      <th>noRooms</th>\n",
+       "      <th>thermalChar</th>\n",
+       "      <th>regio2</th>\n",
+       "      <th>regio3</th>\n",
+       "      <th>lastRefurbish</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>307.00</td>\n",
+       "      <td>1930.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>219.00</td>\n",
+       "      <td>40.20</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Sonnenberg</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Oct19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>501.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>340.00</td>\n",
+       "      <td>65.00</td>\n",
+       "      <td>fully_renovated</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Lutherviertel</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Oct19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>425.00</td>\n",
+       "      <td>1909.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>280.00</td>\n",
+       "      <td>53.12</td>\n",
+       "      <td>well_kept</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>negotiable</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>153.0</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Bernsdorf</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>Feb20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>760.00</td>\n",
+       "      <td>1998.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>560.00</td>\n",
+       "      <td>115.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Sonnenberg</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>Oct19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>715.00</td>\n",
+       "      <td>1920.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>515.00</td>\n",
+       "      <td>102.30</td>\n",
+       "      <td>well_kept</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Zentrum</td>\n",
+       "      <td>1995.0</td>\n",
+       "      <td>Oct19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12570</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>293.00</td>\n",
+       "      <td>1895.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>198.00</td>\n",
+       "      <td>43.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Kappel</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Feb20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12571</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>444.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>314.00</td>\n",
+       "      <td>59.00</td>\n",
+       "      <td>fully_renovated</td>\n",
+       "      <td>sophisticated</td>\n",
+       "      <td>negotiable</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Schloßchemnitz</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>May19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12572</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>799.88</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>611.88</td>\n",
+       "      <td>91.13</td>\n",
+       "      <td>refurbished</td>\n",
+       "      <td>sophisticated</td>\n",
+       "      <td>negotiable</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Gablenz</td>\n",
+       "      <td>2018.0</td>\n",
+       "      <td>May19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12573</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>326.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>222.00</td>\n",
+       "      <td>47.34</td>\n",
+       "      <td>fully_renovated</td>\n",
+       "      <td>normal</td>\n",
+       "      <td>negotiable</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Kaßberg</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>May19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12574</th>\n",
+       "      <td>Sachsen</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>368.00</td>\n",
+       "      <td>1930.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>248.00</td>\n",
+       "      <td>55.00</td>\n",
+       "      <td>negotiable</td>\n",
+       "      <td>simple</td>\n",
+       "      <td>negotiable</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>Chemnitz</td>\n",
+       "      <td>Kappel</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>Sep18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12575 rows × 17 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(12575, 17)"
+       "        regio1  newlyConst  balcony  totalRent  yearConstructed  hasKitchen  \\\n",
+       "0      Sachsen       False     True     307.00           1930.0       False   \n",
+       "1      Sachsen       False     True     501.00              NaN       False   \n",
+       "2      Sachsen       False     True     425.00           1909.0        True   \n",
+       "3      Sachsen       False     True     760.00           1998.0        True   \n",
+       "4      Sachsen       False    False     715.00           1920.0       False   \n",
+       "...        ...         ...      ...        ...              ...         ...   \n",
+       "12570  Sachsen       False    False     293.00           1895.0       False   \n",
+       "12571  Sachsen       False     True     444.00              NaN       False   \n",
+       "12572  Sachsen        True     True     799.88           2018.0       False   \n",
+       "12573  Sachsen       False     True     326.00              NaN       False   \n",
+       "12574  Sachsen       False     True     368.00           1930.0       False   \n",
+       "\n",
+       "       baseRent  livingSpace        condition   interiorQual petsAllowed  \\\n",
+       "0        219.00        40.20              NaN         normal         NaN   \n",
+       "1        340.00        65.00  fully_renovated         normal         yes   \n",
+       "2        280.00        53.12        well_kept         normal  negotiable   \n",
+       "3        560.00       115.00              NaN            NaN         NaN   \n",
+       "4        515.00       102.30        well_kept            NaN         NaN   \n",
+       "...         ...          ...              ...            ...         ...   \n",
+       "12570    198.00        43.00              NaN         normal         NaN   \n",
+       "12571    314.00        59.00  fully_renovated  sophisticated  negotiable   \n",
+       "12572    611.88        91.13      refurbished  sophisticated  negotiable   \n",
+       "12573    222.00        47.34  fully_renovated         normal  negotiable   \n",
+       "12574    248.00        55.00       negotiable         simple  negotiable   \n",
+       "\n",
+       "       noRooms  thermalChar    regio2          regio3  lastRefurbish   date  \n",
+       "0          2.0        123.0  Chemnitz      Sonnenberg            NaN  Oct19  \n",
+       "1          3.0          NaN  Chemnitz   Lutherviertel            NaN  Oct19  \n",
+       "2          2.0        153.0  Chemnitz       Bernsdorf         2014.0  Feb20  \n",
+       "3          5.0          NaN  Chemnitz      Sonnenberg         2000.0  Oct19  \n",
+       "4          3.0          NaN  Chemnitz         Zentrum         1995.0  Oct19  \n",
+       "...        ...          ...       ...             ...            ...    ...  \n",
+       "12570      2.0         96.0  Chemnitz          Kappel            NaN  Feb20  \n",
+       "12571      2.0          NaN  Chemnitz  Schloßchemnitz            NaN  May19  \n",
+       "12572      3.0          NaN  Chemnitz         Gablenz         2018.0  May19  \n",
+       "12573      1.0          NaN  Chemnitz         Kaßberg            NaN  May19  \n",
+       "12574      2.0        129.0  Chemnitz          Kappel         2010.0  Sep18  \n",
+       "\n",
+       "[12575 rows x 17 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clean_chemnitz_in = pd.read_csv('./outData.csv', delimiter=\"\\t\")\n",
-    "clean_chemnitz_in.shape"
+    "clean_chemnitz_in.shape\n",
+    "clean_chemnitz_in"
    ]
   },
   {
@@ -200,6 +504,20 @@
    "metadata": {},
    "source": [
     "### 1. Business Understanding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "OKR:\n",
+    "\n",
+    "Objective: Research renovation service market (niches) and formulate one ore more goals (using the CRISP-DM Process) for Vendors from divers reonvation services (inetrior  & exteriror)\n",
+    "Allowed assumption: people with high appartments do have more money for renovation.\n",
+    "\n",
+    "#KR1: List of renovation service market niches (interior & exterior)\n",
+    "#KR2: Set a core focus for each vendor and their why\n",
+    "#KR3: One ore more goals formulated for the selected vendor"
    ]
   },
   {
