--- a/main.ipynb
+++ b/main.ipynb
@@ -519,6 +519,59 @@
     "#KR2: Set a core focus for each vendor and their why\n",
     "#KR3: One ore more goals formulated for the selected vendor"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Business Understanding:\n",
+    " - Was sind die Ziele auf Geschäftsebene?\n",
+    " - Welche Anforderungen an das Ergebnis gibt\n",
+    "es?\n",
+    "- Welche offenen Fragen sollen beantwortet werden?\n",
+    "- Wie könnten beispielhafte Antworten oder Ergebnisse aussehen?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Understanding:\n",
+    "- Welche Daten liegen vor?\n",
+    "- Wie sehen diese aus? Könnte es Probleme mit den Daten geben?\n",
+    "- Kann man »auf den ersten Blick« bereits Zusammenhänge erkennen?\n",
+    "- Wie könnten beispielhafte Antworten oder Ergebnisse aussehen?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Preperation:\n",
+    "- Können die Daten in der vorliegenden Form\n",
+    "verwendet werden? (meistens: nein)\n",
+    "- Wie können diese vorverarbeitet werden, um sie zu verwenden?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modelling:\n",
+    "- Welche Verfahren lösen mein Problem?\n",
+    "- Wie kann man die Verfahren verbessern?\n",
+    "- Welche Alternativen gibt es?\n",
+    "- Achtung: Es gibt unter Umständen einen (sehr starken) Zusammenhang mit Data Preparation -> Iterationszyklen"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluation:\n",
+    "- Welches Verfahren ist am Besten?\n",
+    "- Beantwortet es die Fragen aus dem Geschäftsverstehen?"
+   ]
   }
  ],
  "metadata": {
