--- a/main.ipynb
+++ b/main.ipynb
@@ -631,6 +631,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 12575 entries, 0 to 12574\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column           Non-Null Count  Dtype  \n",
+      "---  ------           --------------  -----  \n",
+      " 0   regio1           12575 non-null  object \n",
+      " 1   newlyConst       12575 non-null  bool   \n",
+      " 2   balcony          12575 non-null  bool   \n",
+      " 3   totalRent        11388 non-null  float64\n",
+      " 4   yearConstructed  8811 non-null   float64\n",
+      " 5   hasKitchen       12575 non-null  bool   \n",
+      " 6   baseRent         12575 non-null  float64\n",
+      " 7   livingSpace      12575 non-null  float64\n",
+      " 8   condition        9805 non-null   object \n",
+      " 9   interiorQual     7079 non-null   object \n",
+      " 10  petsAllowed      8302 non-null   object \n",
+      " 11  noRooms          12575 non-null  float64\n",
+      " 12  thermalChar      8351 non-null   float64\n",
+      " 13  regio2           12575 non-null  object \n",
+      " 14  regio3           12575 non-null  object \n",
+      " 15  lastRefurbish    2826 non-null   float64\n",
+      " 16  date             12575 non-null  object \n",
+      "dtypes: bool(3), float64(7), object(7)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Übersicht über die Daten und deren Datentypen\n",
+    "chemnitz_in.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
