docs: rm # heading

--- a/main.ipynb
+++ b/main.ipynb
@@ -2024,10 +2024,10 @@
    "source": [
     "Objective: Übersicht über den Datensatz in grafischer Form\n",
     "\n",
-    "- #KR1: Boxplot\n",
-    "- #KR2: Histogram\n",
-    "- #KR3: Scatter Matrix\n",
-    "- #KR4: Heatmap"
+    "- KR1: Boxplot\n",
+    "- KR2: Histogram\n",
+    "- KR3: Scatter Matrix\n",
+    "- KR4: Heatmap"
    ]
   },
   {
