feat: added business understanding

--- a/main.ipynb
+++ b/main.ipynb
@@ -510,12 +510,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Business Understanding:\n",
-    " - Was sind die Ziele auf Geschäftsebene?\n",
-    " - Welche Anforderungen an das Ergebnis gibt\n",
-    "es?\n",
-    "- Welche offenen Fragen sollen beantwortet werden?\n",
-    "- Wie könnten beispielhafte Antworten oder Ergebnisse aussehen?"
+    "Wir sind eine Renovierungsfirma die weiter im Raum Chemnitz expandieren möchte. Momentan sind wir auf Renovierungen im Innenbereich spezialisiert. Um einen größeren Leistungsumfang anzubieten und mehr Umsatz zu generieren steht die Frage im Raum, ob eine zusätzliche Spezialisierung auf Renovierungen im Außenbereich sinnvoll ist.\n",
+    "\n",
+    "Erfahrungsgemäß: \n",
+    "- Umfassende Sanierungen (80.000 €) sind bei Wohnungen älter als 40 Jahre nötig \n",
+    "- Kleine Sanierungen (15.000 €) seit Renovierungsarbeit länger als 10 Jahre her\n",
+    "\n",
+    "Frage:\n",
+    "- Mit wieviel zusätzlichem Umsatz kann gerechnet werden?\n",
+    "\n",
+    "Daher unsere Kernfragen:\n",
+    "1. Lohnt es Experte für Renovierungen im Außenbereich zu werden?\n",
+    "- Sind Wohnungen mit Balkon teuer (total rent) und sind diese über 40 jahre alt und nicht vor 10 Jahren renoviert\n",
+    "- Ist in nächsten fünf Jahren mit großen Renovierungsarbeiten im Außenbereich zu rechnen? Vergleichen von Wohnungen nur mit Innenbereich\n",
+    "\n",
+    "Beispielhafte Antwort:\n",
+    "- Von 12.000 Wohnungen benötigen in den nächsten fünf Jahren 5 Prozent umfassende Renovierungen und 15 Prozent kleinere Sanierungen. Lediglich 1 Prozent der umfassenden Renovierungen haben einen Balkon und nur 3 Prozent der kleinen. Generell haben Wohnungen mit Außenbereich 30 Prozent höhere Mieten.\n",
+    "- Es macht daher keinen Sinn umfassende Investitionen in den Außenbereich zu tätigen "
    ]
   },
   {
