chore: last rfurbish as int

--- a/main.ipynb
+++ b/main.ipynb
@@ -3800,7 +3800,8 @@
    "source": [
     "# lastRefurbish\n",
     "# NaN Werte mit Erbauungsdatum ersetzen\n",
-    "chemnitz_in['lastRefurbish'] = chemnitz_in['lastRefurbish'].combine_first(chemnitz_in['yearConstructed'])"
+    "chemnitz_in['lastRefurbish'] = chemnitz_in['lastRefurbish'].combine_first(chemnitz_in['yearConstructed'])\n",
+    "chemnitz_in[\"lastRefurbish\"] = chemnitz_in[\"lastRefurbish\"].astype(int)"
    ]
   },
   {
