--- a/main.ipynb
+++ b/main.ipynb
@@ -2381,7 +2381,9 @@
     "# lastRefurbish\n",
     "# NaN Werte mit Erbauungsdatum ersetzen\n",
     "chemnitz_3['lastRefurbish'] = chemnitz_3['lastRefurbish'].combine_first(chemnitz_3['yearConstructed'])\n",
-    "chemnitz_3[\"lastRefurbish\"] = chemnitz_3[\"lastRefurbish\"].astype(int)"
+    "chemnitz_3[\"lastRefurbish\"] = chemnitz_3[\"lastRefurbish\"].astype(int)\n",
+    "\n",
+    "# ÜBERPRÜFEN"
    ]
   },
   {
@@ -2726,7 +2728,9 @@
     }
    ],
    "source": [
-    "chemnitz_3.shape"
+    "chemnitz_3.shape\n",
+    "\n",
+    "# ÜBERPRÜFEN wieder 9 mehr als bei Aufgabe 2 (Schlosschemnitz wahrscheinlich wieder drin etc.)"
    ]
   },
   {
@@ -2740,6 +2744,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# KOMPLETT # ÜBERPRÜFEN\n",
+    "\n",
     "Backward Feature Enginering zur Auswahl relevanter Attribute.\n",
     "Daraus folgt:\n",
     "- Wohnungen ohne Balkon entfernt werden.\n",
@@ -3183,6 +3189,8 @@
     }
    ],
    "source": [
+    "# ÜBERPRÜFEN bzw. entfernen\n",
+    "\n",
     "from sklearn.linear_model import Lasso\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score, mean_squared_error\n",
@@ -5056,7 +5064,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Modeling und Evaluation -Leere Felder"
+    "## 5. Modeling und Evaluation -Leere Felder"
    ]
   },
   {
@@ -5532,7 +5540,7 @@
     }
    ],
    "source": [
-    "# hasKithchen, lastRefurbish, yearConstructed, thermalChar, condition, noRooms\n",
+    "# hasKithchen, lastRefurbish, yearConstructed, condition, noRooms\n",
     "# Beispieldatensatz um den Energiebedarf zu berechnen.\n",
     "X_new = [[0, 1930,\t1930,\t1,\t2]]\n",
     "thermal_char_prediction = rf_model_best_fold.predict(X_new)\n",
@@ -5545,7 +5553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Clustering"
+    "## 6. Clustering"
    ]
   },
   {
@@ -5865,11 +5873,14 @@
     }
    ],
    "source": [
+    "# ÜBERPRÜFEN\n",
+    "\n",
     "# Werte Standaisieren mit z-transformation\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "data = chemnitz_apartments_6.drop(columns=['totalRent'])\n",
     "\n",
+    "# ÜBERPRÜFEN ist das Z-Transformation ?\n",
     "scaler = StandardScaler()\n",
     "scaled_data = scaler.fit_transform(data)\n",
     "\n",
@@ -5966,6 +5977,8 @@
     }
    ],
    "source": [
+    "# ÜBERPRÜFEN ob Dimensionen reduzieren mit PCA oder anderer Ansatz\n",
+    "\n",
     "# Dimensionen reduzieren mit der PCA\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
@@ -6074,6 +6087,8 @@
     }
    ],
    "source": [
+    "# ÜBERPRÜFEN\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(10, 6))\n",
