notebook and deployment pdf

--- a/v1_chemnitz.ipynb
+++ b/v1_chemnitz.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## Exploring Renovation Potentials: Data-Driven Insights for Renovation Service Providers in Chemnitz\n",
-    "\n",
+    "DHBW Stuttgart, 2024\n",
     "Matrnr.: 8161859, 1981524"
    ]
   },
